added filtered of units
